--- a/style.css
+++ b/style.css
@@ -102,6 +102,13 @@ h5{
   margin-bottom: 6%;
  } 
 
+ .p3{
+   font-family: Arial, Helvetica, sans-serif;
+   font-weight: lighter;
+   font-size:smaller;
+   font-style: italic;
+ }
+
  .pmargin{
    margin-bottom: 0px;
   } 
