Färdigställning di text samt avstånd

--- a/style.css
+++ b/style.css
@@ -109,6 +109,12 @@ h5{
    font-style: italic;
  }
 
+ .p4{
+   font-family: 'Courgette', cursive;
+   font-size: large;
+   margin-bottom: 3%;
+  }
+
  .pmargin{
    margin-bottom: 0px;
   } 
